[tool.poetry]
name = "sibo"
version = "0.1.0"
description = ""
authors = ["Taihei OKI <oki@icredd.hokudai.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pysat = "^3.2.1"
python-sat = "^1.8.dev13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
